grammar.js
    source_file: $ => seq(
      repeat($._NL),
      optional($.shebang_line),
      repeat($.file_annotation),
      repeat($._NL),
      optional($.package_header),
      repeat($._NL),
      repeat(seq($.import_header, optional(seq($._semi, repeat($._NL))))),
      // In principle, we either parse a Kotlin file (.kt) or a Kotlin script (.kts).
      // Statements cannot appear as top-level constructs in Kotlin files, only in scripts.
      // However, here, we're allowing parsing of both statements and declarations as top level.
      repeat(choice($._top_level_object, $._top_level_statements))
    ),

    import_header: $ => prec.left(seq(
      "import",
      field("name", $.identifier),
      optional(choice(seq(".", $.wildcard_import), $._import_alias)),
    )),

    _import_alias: $ => seq("as", field("alias", $.simple_identifier)),

    _top_level_object: $ => seq($._declaration, repeat($._semi)),

    _top_level_statements: $ => seq(
      sep1(alias($._top_level_statement, $.statement), repeat1($._semi)),
      repeat($._semi)
    ),

    _declaration: $ => choice(
      $.class_declaration,
      alias($.class_declaration_no_body, $.class_declaration),
      $.object_declaration,
      $.function_declaration,
      $.property_declaration,
      $.type_alias
    ),

    // ==========
    // Classes
    // ==========

    class_declaration: $ => seq(
      optional(field("modifiers", $.modifiers)),
      choice("class", seq(optional(seq("fun", repeat($._NL))), "interface")),
      repeat($._NL),
      field("name", $.simple_identifier),
      optional(seq(repeat($._NL), $.type_parameters)),
      optional(seq(repeat($._NL), $.primary_constructor)),
      optional(seq(repeat($._NL), ":", repeat($._NL),  $._delegation_specifiers)),
      optional(seq(repeat($._NL), $.type_constraints)),
      repeat($._NL), 
      field("body", choice($.class_body, alias($.enum_class_body, $.class_body))),
    ),

    primary_constructor: $ => seq(
      optional(seq(optional(field("modifiers", $.modifiers)), "constructor", repeat($._NL))),
      $.class_parameters
    ),

    class_body: $ => seq(
      "{",
      repeat($._NL),
      repeat($._class_member_declaration),
      "}"
    ),

    class_parameters: $ => seq(
      "(",
      repeat($._NL),
      optional(sep1($.class_parameter, repeat($._NL), ",", repeat($._NL))),
      optional(","),
      repeat($._NL),
      ")"
    ),

    class_parameter: $ => seq(
      optional(field("modifiers", $.modifiers)),
      optional(field("binding_pattern", $.binding_pattern_kind)),
      field("name", $.simple_identifier),
      ":",
      field("type", $._type),
      optional(seq(repeat($._NL), "=", repeat($._NL), field("initializer", $.expression)))
    ),

    binding_pattern_kind: $ => choice("val", "var"),

    _delegation_specifiers: $ => sep1(
      $._annotated_delegation_specifier, 
      ",",
      repeat($._NL),
    ),

    delegation_specifier: $ => prec.right(choice(
      $.constructor_invocation,
      $.explicit_delegation,
      $.user_type,
      $.function_type
    )),

    constructor_invocation: $ => seq(
      $.user_type,
      $.value_arguments
    ),

    _class_member_declaration: $ => seq(choice(
      $._declaration,
      $.companion_object,
      $.anonymous_initializer,
      $.secondary_constructor,
    ), repeat($._semi)),

    function_value_parameters: $ => seq(
      "(",
      repeat($._NL),
      optional(sep1($.function_value_parameter, repeat($._NL), ",", repeat($._NL))),
      optional(","),
      repeat($._NL),
      ")"
    ),

    function_declaration: $ => seq(
      optional(field("modifiers", $.modifiers)),
      "fun",
      optional($.type_parameters),
      optional(seq(repeat($._NL), field("receiver_type", $.receiver_type), repeat($._NL), optional("."))),
      field("name", $.simple_identifier),
      field("parameters", $.function_value_parameters),
      optional(seq(repeat($._NL), ":", repeat($._NL), field("type", $._type))),
      optional(seq(repeat($._NL), $.type_constraints)),
      optional(seq(repeat($._NL), field("body", prec.dynamic(100, $.function_body))))
    ),

    function_body: $ => choice(
      $.block, 
      seq("=", repeat($._NL), field("expression", $.expression))
    ),

    variable_declaration: $ => seq(
      repeat($._annotation),
      repeat($._NL),
      field("id", $.simple_identifier),
      optional(field("type", seq(repeat($._NL), ":", repeat($._NL), $._type)))
    ),

    property_declaration: $ => seq(
      optional(field("modifiers", $.modifiers)),
      $.binding_pattern_kind,
      optional(field("type_parameters", $.type_parameters)),
      optional(seq(field("receiver_type", $.receiver_type), ".")),
      field("var_decl", choice($.variable_declaration, $.multi_variable_declaration)),
      optional(field("type_constraints", $.type_constraints)),
      optional(seq(
        repeat($._NL),
        choice(
          seq("=", repeat($._NL), field("initializer", $.expression)),
          $.property_delegate
      ))),
      optional(
        seq(      
          repeat($._NL),
          optional(";"),
          repeat($._NL),
          $._setter_getter
        )
      )
    ),

    _setter_getter: $ => choice(
      seq($.getter, optional(seq(repeat($._NL), $.setter))),
      seq($.setter, optional(seq(repeat($._NL), $.getter)))
    ),

    getter: $ => prec.right(seq(
      optional(field("modifiers", $.modifiers)),
      "get",
      optional(seq(
        "(",
        repeat($._NL),
        ")",
        optional(seq(":", $._type)),
        $.function_body
      ))
    )),

    setter: $ => prec.right(seq(
      optional(field("modifiers", $.modifiers)),
      "set",
      optional(seq(
        "(",
        repeat($._NL),
        $.parameter_with_optional_type,
        ")",
        optional(seq(":", $._type)),
        repeat($._NL),
        $.function_body
      ))
    )),

    parameter_with_optional_type: $ => seq(
      optional($.parameter_modifiers),
      $.simple_identifier,
      optional(seq(":", $._type))
    ),

    _type: $ => seq(
      optional($.type_modifiers),
      choice(
        $.parenthesized_type,
        $.nullable_type,
        $._type_reference,
        $.function_type,
        $.not_nullable_type
      )
    ),

    // Give type reference a higher precedence to resolve conflict with parenthesized expression
    _type_reference: $ => choice(
      field("type", $.user_type),
      "dynamic"
    ),

    nullable_type: $ => seq(
      choice($._type_reference, $.parenthesized_type),
      repeat1("?")
    ),

    user_type: $ => seq(
      $._simple_user_type, repeat(seq(".", repeat($._NL), $._simple_user_type))
    ),

    _simple_user_type: $ => seq(
      alias($.simple_identifier, $.type_identifier),
      optional($.type_arguments)
    ),

    _statements: $ => seq($.statements, repeat($._semi)),

    statements: $ => seq(sep1($.statement, repeat1($._semi)), optional(seq(repeat($._NL), ";"))),

    statement: $ => choice(
      $._declaration,
      $.assignment,
      $._loop_statement,
      $.expression
    ),

    block: $ => seq(
      "{",
      repeat($._NL),
      optional($._statements),
      "}"
    ),

    _loop_statement: $ => choice(
      $.for_statement,
      $.while_statement,
      $.do_while_statement
    ),

    call_expression: $ => prec(PREC.CALL, seq(
      field("expression", $.expression), 
      optional($.type_arguments),
      $._call_arguments
    )),

    // It's not possible to resolve the ambiguity between explicit delegation and calls with last lambda argument.
    // For example:
    //   class Derived(b: Base) : Base by b {
    //     override fun printMessage() { print("abc") }
    //   }
    // Here, b {}, can be parsed as both a call expression or a delegation followed by the class body. In this case,
    // we need the second interpreation. But in funciton calls like `with (s) {}`, we want `{}` to be parsed as part
    // of the call. That means that based on the context a call_expression happens in, we either want left or right
    // associativity for the arguments, which is not posssible to specify with tree-sitter. 
    // Creating a separate nonterminal, is the cleanest way to move forward.
    // A simple_call_expression is the one without the trailing lambda argument.
    _call_arguments: $ => prec.right(choice(
      seq(optional(field("args", $.value_arguments)), field("lambda_arg", $.annotated_lambda)),
      field("args", $.value_arguments)
    )),
    
    additive_expression: $ => prec.left(PREC.ADDITIVE, seq($.expression, repeat($._external_nl), $._additive_operator, repeat($._NL), $.expression)),

    value_arguments: $ => seq(
      "(",
      repeat($._NL),
      optional(
        seq(
          sep1($.value_argument, repeat($._NL), ",", repeat($._NL)),
          optional(seq(repeat($._NL), ",")),
          repeat($._NL),
        )
      ),
      ")"
    ),

    value_argument: $ => seq(
      optional($._annotation),
      repeat($._NL),
      optional(seq($.simple_identifier, repeat($._NL), "=", repeat($._NL))),
      optional("*"),
      repeat($._NL),
      $.expression
    ),

    _control_body_structure: $ => choice(
      $.expression, 
      $.assignment, 
      $.block,
      $._loop_statement,
    ),

    when_subject: $ => seq(
      "(",
      repeat($._NL),
      optional(seq(
        repeat($._annotation),
        "val",
        $.variable_declaration,
        "=",
        repeat($._NL),
      )),
      $.expression,
      ")",
    ),

    when_expression: $ => seq(
      "when",
      repeat($._NL),
      optional($.when_subject),
      "{",
      repeat($._NL),
      optional($.when_entries),
      repeat($._NL),
      "}"
    ),

    when_entries: $ => sep1($._when_entry, repeat($._NL)),

    _when_entry: $ => seq(
      choice(
        $.when_entry,
        $.else_entry
      ),
      optional(seq(repeat($._NL), ";"))
    ),

    when_entry: $ => seq(
      sep1($.when_condition, repeat($._NL), ",", repeat($._NL)), 
      optional(seq(repeat($._NL), optional(","))),
      repeat($._NL),
      "->",
      repeat($._NL),
      $._control_body_structure,
    ),

    when_condition: $ => choice(
      $.expression,
      $.range_test,
      $.type_test
    ),

    type_test: $ => seq($._is_operator, $._type),

    _is_operator: $ => choice("is", "!is"),

    _additive_operator: $ => choice("+", "-"),

    modifiers: $ => prec.right(repeat1(choice($._annotation, $._modifier))),

    _modifier: $ => seq(choice(
      $.class_modifier,
      $.member_modifier,
      $.visibility_modifier,
      $.function_modifier,
      $.property_modifier,
      $.inheritance_modifier,
      $.parameter_modifier,
      $.platform_modifier
    ), repeat($._NL)),

    type_modifiers: $ => repeat1($._type_modifier),

    _type_modifier: $ => choice($._annotation, "suspend"),

    class_modifier: $ => choice(
      "enum",
      "sealed",
      "annotation",
      "data",
      "inner",
      "value",
    ),

    visibility_modifier: $ => choice(
      "public",
      "private",
      "internal",
      "protected"
    ),

    _annotation: $ => seq(
      $.annotation,
      repeat($._NL)
    ),

    annotation: $ => choice($._single_annotation, $._multi_annotation),

    _single_annotation: $ => seq(
      "@",
      optional($.use_site_target),
      $._unescaped_annotation
    ),

    _multi_annotation: $ => seq(
      "@",
      optional($.use_site_target),
      "[",
      repeat1($._unescaped_annotation),
      "]"
    ),

    simple_identifier: $ => choice($._lexical_identifier, $._soft_keywords),

    _soft_keywords: $ => choice(
      "by",
      "catch",
      "constructor",
      "delegate",
      "dyanamic",
      "field",
      "file",
      "finally",
      "get",
      "import",
      "init",
      "param",
      "property",
      "receiver",
      "set",
      "setparam",
      "value",
      "where",
      // modifier keywords
      "abstract",
      "actual",
      "annotation",
      "companion",
      "const",
      "crossline",
      "data",
      "enum",
      "expect",
      "data",
      "inner",
      "internal",
      "lateinit",
      "noinline",
      "open",
      "operator",
      "out",
      "override",
      "private",
      "protected",
      "public",
      "reified",
      "sealed",
      "suspend",
      "tailrec",
      "vararg"
    ),

    identifier: $ => sep1($.simple_identifier, "."),

    // ====================
    // Lexical grammar
    // ====================

    // ==========
    // Keywords
    // ==========

    integer_literal: $ => token(seq(optional(/[1-9]/), DEC_DIGITS)),

    _lexical_identifier: $ => choice(
      $._alpha_identifier,
      $._backtick_identifier,
    ),

    _NL: $ => token(/\n/),
    _semi: $ => choice(";", $._NL),

    line_comment: $ => token(seq("//", /[^\r\n]*/)),

    // We need to consume all the newlines after the commend, otherwise, the comments
    // may be inserted in unwanted places. Comments (and other extra) nodes are inserted
    // after tokens.
    // multiline_comment: $ => seq(
    //   token("/*"), 
    //   repeat(choice($._NL, /./)), 
    //   token("*/"),
    // )
  }
});

function sep1(rule, ...separator) {
  return seq(rule, repeat(seq(...separator, rule)));
}
