test/corpus/comments.txt
================================================================================
Comments
================================================================================

1 + 2
// 1 + 2
/* very
  /* nested
     /* comment */
  goes
  */ 
  here
*/
// "strings are cool too"
/* even """multiline strings""" */

--------------------------------------------------------------------------------

(source_file
  (statement
    (additive_expression
      (integer_literal)
      (integer_literal)))
  (line_comment)
  (multiline_comment)
  (line_comment)
  (multiline_comment))


================================================================================
Multi-line comments
================================================================================

/***/
/** aaa **/
/* /***/ **/

--------------------------------------------------------------------------------

(source_file
  (multiline_comment)
  (multiline_comment)
  (multiline_comment))

================================================================================
Comment after imports
================================================================================

import a.b.c
import x.y.z

// this is a comment
class Foo {}

--------------------------------------------------------------------------------

(source_file
  (import_header
    name: (identifier
      (simple_identifier)
      (simple_identifier)
      (simple_identifier)))
  (import_header
    name: (identifier
      (simple_identifier)
      (simple_identifier)
      (simple_identifier)))
  (line_comment)
  (class_declaration
    name: (simple_identifier)
    body: (class_body)))

================================================================================
Block Comment after imports
================================================================================

import a.b.c
import x.y.z

/* this is a comment */
class Foo {}

--------------------------------------------------------------------------------

(source_file
  (import_header
    name: (identifier
      (simple_identifier)
      (simple_identifier)
      (simple_identifier)))
  (import_header
    name: (identifier
      (simple_identifier)
      (simple_identifier)
      (simple_identifier)))
  (multiline_comment)
  (class_declaration
    name: (simple_identifier)
    body: (class_body)))

================================================================================
Block Comment after imports with newline
================================================================================

import a.b.c
import x.y.z

/* this is a comment */


class Foo {}

--------------------------------------------------------------------------------

(source_file
  (import_header
    name: (identifier
      (simple_identifier)
      (simple_identifier)
      (simple_identifier)))
  (import_header
    name: (identifier
      (simple_identifier)
      (simple_identifier)
      (simple_identifier)))
  (multiline_comment)
  (class_declaration
    name: (simple_identifier)
    body: (class_body)))

================================================================================
Comment before class member
================================================================================

class A {
    /* comment */
    fun f() {
    }
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (simple_identifier)
    body: (class_body
      (multiline_comment)
      (function_declaration
        name: (simple_identifier)
        parameters: (function_value_parameters)
        body: (function_body
          (block))))))

================================================================================
Comments in function call
================================================================================

f(1 //line comment
  + /* comment 2*/ 2)

--------------------------------------------------------------------------------

(source_file
  (statement
    (call_expression
      expression: (simple_identifier)
      args: (value_arguments
        (value_argument
          expression: (additive_expression
            (integer_literal)
            (line_comment)
            (multiline_comment)
            (integer_literal)))))))

================================================================================
Comments before constructor parameter
================================================================================

public data class PluginName(
    /**
     * Plugin name.
     */
    val pluginName: String
) : AbstractCoroutineContextElement(PluginName) {
}

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    modifiers: (modifiers
      (visibility_modifier)
      (class_modifier))
    name: (simple_identifier)
    primary_constructor: (primary_constructor
      (class_parameters
        (multiline_comment)
        (class_parameter
          binding_pattern: (binding_pattern_kind)
          name: (simple_identifier)
          type: (user_type
            (type_identifier)))))
    (delegation_specifier
      (constructor_invocation
        type: (user_type
          (type_identifier))
        args: (value_arguments
          (value_argument
            expression: (simple_identifier)))))
    body: (class_body)))

================================================================================
Comment between imports
================================================================================

/* this is a comment */
import a.b.c
/* this is a comment */
/* this is a comment */
import x.y.z
/* this is a comment */

--------------------------------------------------------------------------------

(source_file
  (multiline_comment)
  (import_header
    name: (identifier
      (simple_identifier)
      (simple_identifier)
      (simple_identifier)))
  (multiline_comment)
  (multiline_comment)
  (import_header
    name: (identifier
      (simple_identifier)
      (simple_identifier)
      (simple_identifier)))
  (multiline_comment))


================================================================================
Comments between top-level statements
================================================================================

// aaa
a
/**
  b
  b
*/ 
b
// ccc

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (statement
    (simple_identifier))
  (multiline_comment)
  (statement
    (simple_identifier))
  (line_comment))

================================================================================
Comments between block statements
================================================================================

fun f() {
  // aaa
  a
  /**
   b
   b
  */ 
  b
  // ccc
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters)
    body: (function_body
      (block
        (line_comment)
        (statements
          (statement
            (simple_identifier))
          (multiline_comment)
          (statement
            (simple_identifier)))
        (line_comment)))))


================================================================================
Line comments between block statements
================================================================================

fun f() {
	// aaaa
	b // bbb
    // ccc
	a // ddd
    // eee
}

--------------------------------------------------------------------------------

(source_file
  (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters)
    body: (function_body
      (block
        (line_comment)
        (statements
          (statement
            (simple_identifier))
          (line_comment)
          (line_comment)
          (statement
            (simple_identifier)))
        (line_comment)
        (line_comment)))))


================================================================================
Comments between property declarations without body
================================================================================

val baz: @a Int?

// comment

val x: Int

--------------------------------------------------------------------------------

(source_file
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier)
      type: (type_modifiers
        (annotation
          (user_type
            (type_identifier))))
      type: (nullable_type
        type: (user_type
          (type_identifier)))))
  (line_comment)
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier)
      type: (user_type
        (type_identifier)))))

================================================================================
Comments in when expression
================================================================================

when (e) {
  // comment 	
  is S -> d
  // comment
  is T -> d
  // comment
}

--------------------------------------------------------------------------------

(source_file
  (statement
    (when_expression
      (when_subject
        (simple_identifier))
      (line_comment)
      (when_entries
        (when_entry
          (when_condition
            (type_test
              type: (user_type
                (type_identifier))))
          (simple_identifier))
        (line_comment)
        (when_entry
          (when_condition
            (type_test
              type: (user_type
                (type_identifier))))
          (simple_identifier)))
      (line_comment))))

================================================================================
Comment after properties with getter/setters
================================================================================

// comment
val foo = foo
   get() {}
   set(it) {}
// comment
val foo = foo
   get() {}
//comment   
val foo = foo
   set(it) {}   
// comment

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (simple_identifier)
    (getter
      (function_body
        (block)))
    (setter
      (parameter_with_optional_type
        (simple_identifier))
      (function_body
        (block))))
  (line_comment)
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (simple_identifier)
    (getter
      (function_body
        (block))))
  (line_comment)
  (property_declaration
    (binding_pattern_kind)
    var_decl: (variable_declaration
      id: (simple_identifier))
    initializer: (simple_identifier)
    (setter
      (parameter_with_optional_type
        (simple_identifier))
      (function_body
        (block))))
  (line_comment))

================================================================================
Comment between functions
================================================================================

// comment
fun f(): T =
	a
// comment
/***/
fun f() = 
	a // comment
// comment    
fun f() {
} // comment
// comment

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters)
    type: (user_type
      (type_identifier))
    body: (function_body
      expression: (simple_identifier)))
  (line_comment)
  (multiline_comment)
  (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters)
    body: (function_body
      expression: (simple_identifier)))
  (line_comment)
  (line_comment)
  (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters)
    body: (function_body
      (block)))
  (line_comment)
  (line_comment))

================================================================================
Comment between functions without body
================================================================================

// comment
fun f(): T
// comment
/***/
fun f()
// comment    
fun f() // comment
// comment

--------------------------------------------------------------------------------

(source_file
  (line_comment)
  (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters)
    type: (user_type
      (type_identifier)))
  (line_comment)
  (multiline_comment)
  (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters))
  (line_comment)
  (function_declaration
    name: (simple_identifier)
    parameters: (function_value_parameters))
  (line_comment)
  (line_comment))

================================================================================
Comment between classes without body
================================================================================

class A
// comment
class B() : C
// comment
class C {
}
// commment

--------------------------------------------------------------------------------

(source_file
  (class_declaration
    name: (simple_identifier))
  (line_comment)
  (class_declaration
    name: (simple_identifier)
    primary_constructor: (primary_constructor
      (class_parameters))
    (delegation_specifier
      (user_type
        (type_identifier))))
  (line_comment)
  (class_declaration
    name: (simple_identifier)
    body: (class_body))
  (line_comment))
